--- a/vignettes/FRK_intro.Rnw
+++ b/vignettes/FRK_intro.Rnw
@@ -46,7 +46,7 @@
 
     ## Setup SRE model
     f <- log(zinc) ~ 1
-    S <- SRE(f,list(meuse,HexPols_df2),BAUs = HexPols_df, G)
+    S <- SRE(f,list(meuse,HexPols_df2),BAUs = HexPols_df, G,est_error=T)
     S <- SRE.fit(S,n_EM = 10,print_lik=T)
 
     ## Point predict
