--- a/vignettes/FRK_intro.tex
+++ b/vignettes/FRK_intro.tex
@@ -117,7 +117,7 @@
 \hlstd{S} \hlkwb{<-} \hlkwd{SRE}\hlstd{(f,}\hlkwd{list}\hlstd{(meuse,HexPols_df2),}\hlkwc{BAUs} \hlstd{= HexPols_df, G,}\hlkwc{est_error}\hlstd{=T)}
 \end{alltt}
 \begin{verbatim}
-## [1] "Binned data in 1.258 seconds"
+## [1] "Binned data in 1.241 seconds"
 \end{verbatim}
 
 
@@ -180,5 +180,7 @@
 
 
 \end{knitrout}
+
+Error?
 
 \end{document}
