--- a/inst/doc/FRK_SST.Rnw
+++ b/inst/doc/FRK_SST.Rnw
@@ -9,8 +9,9 @@
 library(sp)
 library(ggplot2)
 library(dplyr)
-devtools::load_all("~/Wollongong/pkgs/FRK",
-                   export_all = FALSE)
+library(FRK)
+# devtools::load_all("~/Wollongong/pkgs/FRK",
+#                    export_all = FALSE)
 
 opts_FRK$set("progress",FALSE)
 
