Many edits but mostly documentation update

--- a/vignettes/FRK_1D_ST.Rnw
+++ b/vignettes/FRK_1D_ST.Rnw
@@ -11,9 +11,9 @@ Introduction
 library(sp)
 library(ggplot2)
 library(dplyr)
-#library(FRK)
-devtools::load_all("~/Wollongong/pkgs/FRK",
-                   export_all = FALSE)
+library(FRK)
+# devtools::load_all("~/Wollongong/pkgs/FRK",
+#                    export_all = FALSE)
 opts_FRK$set("progress",FALSE)
 opts_FRK$set("parallel",0L)
 @
@@ -77,11 +77,11 @@ S <- SRE(f,list(sim_data),G,
 @
 
 <<eval=TRUE>>=
-S <- SRE.fit(S,n_EM = 50,tol = 1e-5,print_lik=T)
+S <- SRE.fit(S,n_EM = 50,tol = 1e-5,print_lik=TRUE)
 @
 
 <<eval=TRUE>>=
-grid_BAUs <- SRE.predict(S,pred_locs = grid_BAUs,use_centroid = T)
+grid_BAUs <- SRE.predict(S,pred_locs = grid_BAUs,use_centroid = TRUE)
 @
 
 <<eval=TRUE>>=
