--- a/vignettes/FRK_AIRS.Rnw
+++ b/vignettes/FRK_AIRS.Rnw
@@ -11,9 +11,9 @@ Introduction
 library(sp)
 library(ggplot2)
 library(dplyr)
-# library(FRK)
-      devtools::load_all("~/Wollongong/pkgs/FRK",
-                              export_all = FALSE)
+library(FRK)
+#       devtools::load_all("~/Wollongong/pkgs/FRK",
+#                               export_all = FALSE)
 opts_FRK$set("progress",FALSE)
 opts_FRK$set("parallel",0L)
 @
@@ -53,11 +53,11 @@ S <- SRE(f,list(AIRS_05_2003),G,
 @
 
 <<eval=TRUE>>=
-S <- SRE.fit(S,n_EM = 3,tol = 1e-5,print_lik=T)
+S <- SRE.fit(S,n_EM = 3,tol = 1e-5,print_lik=TRUE)
 @
 
 <<eval=TRUE>>=
-isea3h_sp_poldf <- SRE.predict(S,pred_locs = isea3h_sp_poldf,use_centroid = T)
+isea3h_sp_poldf <- SRE.predict(S,pred_locs = isea3h_sp_poldf,use_centroid = TRUE)
 @
 
 <<eval=TRUE>>=
