--- a/vignettes/FRK_intro.Rnw
+++ b/vignettes/FRK_intro.Rnw
@@ -17,9 +17,9 @@ library(knitr)
 library(sp)
 library(ggplot2)
 library(dplyr)
-# library(FRK)
- devtools::load_all("~/Wollongong/pkgs/FRK",
-                    export_all = FALSE)
+library(FRK)
+#  devtools::load_all("~/Wollongong/pkgs/FRK",
+                    # export_all = FALSE)
 
 opts_FRK$set("progress",FALSE)
 opts_FRK$set("parallel",0L)
@@ -56,10 +56,10 @@ if(require(INLA)) { ## Need INLA from here on
         ## Setup SRE model
         f <- log(zinc) ~ 1
         S <- SRE(f,list(meuse,HexPols_df2),BAUs = HexPols_df, G,est_error=T)
-        S <- SRE.fit(S,n_EM = 10,print_lik=T)
+        S <- SRE.fit(S,n_EM = 10,print_lik=TRUE)
 
         ## Point predict
-        HexPols_df <- SRE.predict(S,use_centroid = T)
+        HexPols_df <- SRE.predict(S,use_centroid = TRUE)
 
         X <- SpatialPolygonsDataFrame_to_df(sp_polys = HexPols_df,
                                             vars = c("mu","var"))
