--- a/bigstudies/FRK_1D_ST.Rnw
+++ b/bigstudies/FRK_1D_ST.Rnw
@@ -4,9 +4,9 @@
 library(sp)
 library(ggplot2)
 library(dplyr)
-library(FRK)
-# devtools::load_all("~/Wollongong/pkgs/FRK",
-#                    export_all = FALSE)
+#library(FRK)
+ devtools::load_all("~/Wollongong/pkgs/FRK",
+                    export_all = FALSE)
 opts_FRK$set("progress",FALSE)
 opts_FRK$set("parallel",0L)
 @
