--- a/bigstudies/FRK_NOAA_ST2.Rnw
+++ b/bigstudies/FRK_NOAA_ST2.Rnw
@@ -4,30 +4,33 @@ library(ggplot2)
 library(dplyr)
 library(spacetime)
 library(gridExtra)
-devtools::load_all("~/Wollongong/pkgs/FRK",
-                   export_all = FALSE)
-opts_FRK$set("progress",FALSE)
+library(FRK)
+# devtools::load_all("~/Wollongong/pkgs/FRK",
+#                    export_all = FALSE)
+opts_FRK$set("progress",TRUE)
 opts_FRK$set("parallel",0L)
 
 ## Load dataset
-load("./data/NOAA_df_1990.Rdata")
+#load("./data/NOAA_df_1990.Rdata")
+data(NOAA_df_1990)
+
 Tmax <- subset(NOAA_df_1990,    # subset the data
-              proc=="Tmax") %>%     # year of 1993
-        group_by(year,id) %>%
-        summarise(z = mean(z),lon=lon[1],lat=lat[1]) %>%
-        mutate(time = as.Date(paste(year,06,01,sep="-"))) %>%
-        mutate(std = 3) %>%   ## Set measurement error to some value (this needs to be known)
-        dplyr::select(z,lon,lat,time,id,std) %>%
-        as.data.frame()
+              proc=="Tmax") %>% # Only max. temperatures
+        group_by(year,id) %>%   # group by year and station
+        summarise(z = mean(z),lon=lon[1],lat=lat[1]) %>%   # find average at each station
+        mutate(time = as.Date(paste(year,06,01,sep="-"))) %>%   # create date object
+        mutate(std = 2) %>%     # Set measurement error to some value (this needs to be known)
+        dplyr::select(z,lon,lat,time,id,std) %>%  # select subset of columns
+        as.data.frame()         # convert to data frame
 
 STObj <- stConstruct(x = Tmax,                  # dataset
                  space = c("lon","lat"),        # spatial fields
                  time="time",                   # time field
                  crs=CRS("+proj=longlat"),      # projection (lon-lat)
-                 interval=TRUE)
+                 interval=TRUE)                 # time is an interval
 
 ## Remove projection information
-proj4string(STObj) <- ""
+proj4string(STObj) <- ""                        # we are not working on the sphere
 
 ## Construct space-time BAUs on the plane
 grid_BAUs <- auto_BAUs(manifold=STplane(),    # Planar ST process
@@ -51,8 +54,8 @@ G_spatial <- auto_basis(m = plane(),               # on R^2
 
 ## Construct temporal basis functions
 G_temporal <- radial_basis(manifold=real_line(),         # on R^1
-                           loc = matrix(c(2,4,6)), # locations
-                           scale = rep(1.5,3))             # scales
+                           loc = matrix(c(2,4,6)),       # locations
+                           scale = rep(1.5,3))           # scales
 
 ## Plot spatial and temporal basis functions
 basis_s_plot <- show_basis(G_spatial) + xlab("lon") + ylab("lat")
