--- a/bigstudies/FRK_SST.Rnw
+++ b/bigstudies/FRK_SST.Rnw
@@ -56,7 +56,7 @@ X <- SpatialPolygonsDataFrame_to_df(sp_polys = isea3h_sp_poldf,
 coords <- coordinates(SST)
 g1 <- (EmptyTheme() +
            geom_polygon(data=X,
-                        aes(lon,lat,fill=sqrt(var),group=id)) +
+                        aes(lon,lat,fill=mu,group=id)) +
            scale_fill_distiller(palette="Spectral",trans="reverse") +
            coord_map("mollweide",
                      xlim = range(coords[,1]),
