Changed all projects to +ellps=sphere so that there is no conflict between WGS84 and use of spherical GC distance. Now need to enforce that only sphere is used and add support for ellipsoids in later versions.
Still have problem with Travis build.

--- a/bigstudies/FRK_AIRS.Rnw
+++ b/bigstudies/FRK_AIRS.Rnw
@@ -19,7 +19,7 @@ AIRS_05_2003 <- filter(AIRS_05_2003,day %in% 1:5) %>%
     mutate(std=co2std) %>%
     select(lon,lat,co2avgret,std)
 coordinates(AIRS_05_2003) = ~lon+lat # change into an sp object
-proj4string(AIRS_05_2003)=CRS("+proj=longlat")
+proj4string(AIRS_05_2003)=CRS("+proj=longlat +ellps=sphere")
 @
 
 <<eval=TRUE>>=
@@ -35,7 +35,8 @@ isea3h_sp_poldf$fs = 1
 
 <<eval=TRUE>>=
 ## Set up SRE model
-G <- auto_basis(m = sphere(),data=AIRS_05_2003,
+G <- auto_basis(m = sphere(),
+                data=AIRS_05_2003,
                 nres = 4,prune=15,
                 type = "bisquare",
                 subsamp = 20000)
@@ -49,7 +50,7 @@ S <- SRE(f,list(AIRS_05_2003),G,
 @
 
 <<eval=TRUE>>=
-S <- SRE.fit(S,n_EM = 200,tol = 1e-5,print_lik=TRUE)
+S <- SRE.fit(S,n_EM = 5,tol = 1e-5,print_lik=TRUE)
 @
 
 <<eval=TRUE>>=
